...

  // Main navigation routes
  static final List<NavItem> _navItems = [
    const NavItem(
      icon: FontAwesomeIcons.house,
      activeIcon: FontAwesomeIcons.house,
      label: 'Home',
      route: '/home',
    ),
    const NavItem(
      icon: FontAwesomeIcons.calendar,
      activeIcon: FontAwesomeIcons.calendarCheck,
      label: 'Calendar',
      route: '/calendar',
    ),
    const NavItem(
      icon: FontAwesomeIcons.chartLine,
      activeIcon: FontAwesomeIcons.chartArea,
      label: 'Insights',
...
